--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json-rules-engine": "^5.0.3",
     "moment": "^2.24.0",
     "node-html-parser": "^1.2.12",
+    "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.0",
